# End-to-End-Data-Engineering-and-ML-System

./: .gitignore  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt  test.py  test_connection.py
common_kafka/: consumer.py  producer.py  topics.py
config/: settings.py
data_example/: network_traffic.csv  preprocessing.pkl  train_batch.csv
data_example/model_autoencoder/: autoencoder.h5  autoencoder.keras
mlruns/341549131102907605/: meta.yaml
mlruns/341549131102907605/20c7a235386c48e9aa7f021c832dbfa2/: meta.yaml
mlruns/341549131102907605/20c7a235386c48e9aa7f021c832dbfa2/artifacts/: model_summary.txt
mlruns/341549131102907605/20c7a235386c48e9aa7f021c832dbfa2/metrics/: final_train_loss  final_val_loss  loss  mse_max  mse_mean  mse_min  val_loss
mlruns/341549131102907605/20c7a235386c48e9aa7f021c832dbfa2/params/: train_csv
mlruns/341549131102907605/20c7a235386c48e9aa7f021c832dbfa2/tags/: mlflow.log-model.history
mlruns/341549131102907605/4cbd5534acc04eb2a587ab1b6c39367a/: meta.yaml
mlruns/341549131102907605/4cbd5534acc04eb2a587ab1b6c39367a/artifacts/: model_summary.txt
mlruns/341549131102907605/6a5ec4e70101472dad3edd81a5a25871/: meta.yaml
mlruns/341549131102907605/f31a78023e8449f286e54b89f7e75447/: meta.yaml
mlruns/models/NetworkAnomalyDetector/: meta.yaml
mlruns/models/network-anomaly-detector/: meta.yaml
scripts/: manage_model_registry.py  preprocess_cicids2017.py  simulate_network_traffic.py  stream_anomaly_detector.py  streamlit_dashboard.py  train_autoencoder.py
(+51 files in other folders)
